Quick renaming of context plus adding more description in readme

--- a/AdvancedProgramming_Lesson2/AdvancedProgramming_Lesson2/appsettings.json
+++ b/AdvancedProgramming_Lesson2/AdvancedProgramming_Lesson2/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MvcContext": "Server=(localdb)\\mssqllocaldb;Database=MvcContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
