--- a/AdvancedProgramming_Lesson2/AdvancedProgramming_Lesson2/AdvancedProgramming_Lesson2.csproj
+++ b/AdvancedProgramming_Lesson2/AdvancedProgramming_Lesson2/AdvancedProgramming_Lesson2.csproj
@@ -11,33 +11,15 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Update="Resources\Pages\IndexModel.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>IndexModel.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Resources\Program.resx">
+    <EmbeddedResource Update="Resources\SharedResource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Program.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Resources\Pages\Index.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Index.Designer.cs</LastGenOutput>
+      <LastGenOutput>SharedResource.Designer.cs</LastGenOutput>
     </EmbeddedResource>  </ItemGroup>
   <ItemGroup>
-    <Compile Update="Resources\Program.Designer.cs">
+    <Compile Update="Resources\SharedResource.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Program.resx</DependentUpon>
-    </Compile>
-    <Compile Update="Resources\Pages\IndexModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>IndexModel.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Update="Resources\Pages\Index.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Index.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
+      <DependentUpon>SharedResource.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
